[package]
authors     = ["Wei Tang <hi@that.world>"]
description = "An Apache-licensed Ethash implementation."
edition     = "2018"
license     = "Apache-2.0"
name        = "ethash"
version     = "0.4.0"

[dependencies]
byteorder       = { version = "1.4.2", default-features = false }
ethereum-types  = { default-features = false, git = "https://github.com/darwinia-network/parity-common.git" }
primitive-types = { default-features = false, git = "https://github.com/darwinia-network/parity-common.git", features = ["rlp"] }
rlp             = { default-features = false, git = "https://github.com/darwinia-network/parity-common.git" }
sha3            = { version = "0.9.1", default-features = false }

[dev-dependencies]
array-bytes = { version = "1.1.0" }

[features]
default = ["std"]
std     = [
	"byteorder/std",
	"ethereum-types/std",
	"rlp/std",
	"sha3/std",
]
